--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ body {
 </div>
 
 <div class="footer">
-    <a href="#">This website was made by R. A. Pratama. Find out more at www.thiswebsitedoesnotexist.com</a>
+    <a href="#">This website was a test made by R. A. Pratama. Find out more at www.thiswebsitedoesnotexist.com</a>
 </div>
 
 </body>
