--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {
     font-size: 50px;
   }
   .header h2 {
-      font-size: 30px;
+    font-size: 30px;
   }
   /* Style the top navigation bar */
 .navbar {
@@ -62,12 +62,14 @@ body {
 .footer {
     padding: 20px;
     background-color:#5e5e5e
+    
 }
 .footer a {
     display:block;
     color: white;
     text-decoration:none;
     text-align: center;
+    position: relative;
 
 }
 
@@ -80,7 +82,7 @@ body {
 
 
 .card {
-  background-color: white;
+  background-color: lightgrey;
   padding: 20px;
   margin-top: 20px;
 }
