--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ body {
 
 
 .card {
+  float: left;
+  width: 100%;
   background-color: lightgrey;
   padding: 20px;
   margin-top: 20px;
@@ -141,7 +143,7 @@ body {
         <div class="card">
             <h1>Title Heading</h1>
             <h3>Subheading and date</h3>
-            <div class="fakeimg"><img src="GERflag.png" alt="test image" height="300"></div>
+            <div class="fakeimg"><img src="GERflag.png" alt="test image" height="300px"></div>
             <p>Some Text</p>
         </div>
 
