--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
     font-size: 30px;
 }
 .footer {
-    padding: 5px;
+    padding: 10%;
     background-color:#5e5e5e
     
 }
@@ -70,7 +70,7 @@ body {
     color: white;
     text-decoration:none;
     text-align: center;
-    position: bottom;
+    
 
 }
 
