--- a/index.html
+++ b/index.html
@@ -1,164 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
 <title>index</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<style>/* CSS Formating Stuff*/
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-.header {
-    padding: 1px; /* some padding */
-    text-align: center; /* center the text */
-    background: #c53131; /* green background */
-    color: white; /* white text color */
-  }
-  
-  /* Increase the font size of the <h1> element */
-  .header h1 {
-    font-size: 50px;
-  }
-  .header h2 {
-    font-size: 30px;
-  }
-  /* Style the top navigation bar */
-.navbar {
-  overflow: hidden; /* Hide overflow */
-  background-color: #333; /* Dark background color */
-}
-
-/* Style the navigation bar links */
-.navbar a {
-  float: left; /* Make sure that the links stay side-by-side */
-  display: block; /* Change the display to block, for responsive reasons (see below) */
-  color: white; /* White text color */
-  text-align: center; /* Center the text */
-  padding: 14px 20px; /* Add some padding */
-  text-decoration: none; /* Remove underline */
-}
-
-/* Right-aligned link */
-.navbar a.right {
-  float: right; /* Float a link to the right */
-}
-
-/* Change color on hover/mouse-over */
-.navbar a:hover {
-  background-color: #ddd; /* Grey background color */
-  color: black; /* Black text color */
-}
-
-.subheader {
-    padding: 1px;
-    background: #5e5e5e;
-    text-align: center;
-    color: white;
-}
-.subheader h2 {
-    font-size: 30px;
-}
-.footer {
-    padding: 10%;
-    background-color:#5e5e5e
-    
-}
-.footer a {
-    display:block;
-    color: white;
-    text-decoration:none;
-    text-align: center;
-    
-
-}
-
-.content {
-    float: left;
-    width: 100%;
-    padding: 20px;
-}
-
-
-
-.card {
-  float: left;
-  width: 100%;
-  background-color: lightgrey;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-.card h1 {
-    color: black;
-    font-size: 30px;
-}
-
-.card h3 {
-    color: black;
-    font-size: 20px;
-}
-
-.card p {
-    color: black;
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.fakeimg {
-  background-color: #aaa;
-  padding: 20px;
-}
-
-
-
-
-
-  
-  /* Close CSS Formating Stuff*/
-</style>
+<head>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<!--HTML stuff-->
 <body>
-<div class="header"><!--Header Class-->
-    <h2>Welcome to the website of</h2>
-    <h1>R. A. Pratama</h1>
-</div>
-
-<div class="navbar">
-    <a href="index.html">Blog</a>
-    <a href="my_projects.html">My Projects</a>
-    <a href="about_me.html">About Me</a>
-    <a href="image_gallery.html">Image Gallery</a>
-</div>
-
-<div class="subheader">
-    <h2>Blog</h2>
-</div>
-
-<div class ="content">
-    <div class="main">
-        <div class="card">
-            <h1>Title Heading</h1>
-            <h3>Subheading and date</h3>
-            <div class="fakeimg"><img src="GERflag.png" alt="test image" height="300px"></div>
-            <p>Some Text</p>
-        </div>
-
-        <div class="card">
-            <h1>Title Heading</h1>
-            <h3>Subheading and date</h3>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some Text</p>
-        </div>
+    <div class="header">
+        <h2>Welcome to</h2>
+        <h1>rapratama2005.github.io</h1>
     </div>
-</div>
 
-<div class="footer">
-    <a href="#">This website was a test made by R. A. Pratama. Find out more at www.thiswebsitedoesnotexist.com</a>
-</div>
+    <div class="navbar">
+        <a href="index.html">Blog</a>
+        <a href="my_projects.html">My Projects</a>
+        <a href="about_me.html">About Me</a>
+        <a href="image_gallery.html">Image Gallery</a>
+    </div>
 
+    <div class="subheader">
+        <h2>Blog</h2>
+    </div>
+
+    <div class="content">
+
+        <div class="card">
+            <h2>TITLE HEADING</h2>
+            <h5>Title description, Dec 7, 2017</h5>
+            <div class="fakeimg" style="height:200px;">Image</div>
+            <p>Some text..</p>
+          </div>
+
+          <div class="card">
+            <h2>TITLE HEADING</h2>
+            <h5>Title description, Dec 7, 2017</h5>
+            <div class="fakeimg" style="height:200px;">Image</div>
+            <p>Some text..</p>
+          </div>
+
+    </div>
+
+    <div class="footer">
+        <a href="#">This website was a test made by R. A. Pratama. Find out more at www.thiswebsitedoesnotexist.com</a>
+    </div>
 </body>
 </html>
