--- a/about_me.html
+++ b/about_me.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="subheader">
-        <h2>Blog</h2>
+        <h2>About Me</h2>
     </div>
 
     <div class="content">
