--- a/image_gallery.html
+++ b/image_gallery.html
@@ -27,17 +27,10 @@
     <div class="content">
 
         <div class="card">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
+            <h2>WORK IN PROGRESS</h2>
+            <h5>Something will be here soon, Dec 31, 2021</h5>
             <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-          </div>
-
-          <div class="card">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
+            <p>Some time soon..</p>
           </div>
 
     </div>
