--- a/about_me.html
+++ b/about_me.html
@@ -27,18 +27,13 @@
     <div class="content">
 
         <div class="card">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
+            <h2>About Me</h2>
+            <h5>Last Updated Dec 17, 2021</h5>
+            <div class="fakeimg" style="height:200px;">Image Not Found</div>
+            <p>Hi, I'm me. I'm a sophomore planning to major in Computer Science. I'm a Black Belt in Taekwondo, I'm an Underclassmen Representative of my Computer Science Club, and I'm the Vice President of my Robotics Team. I also enjoy playing Guitar, D&D, and Video Games. </p>
           </div>
 
-          <div class="card">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-          </div>
+
 
     </div>
 
