--- a/index.html
+++ b/index.html
@@ -27,18 +27,20 @@
     <div class="content">
 
         <div class="card">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
+            <h2>Start of Winter Break</h2>
+            <h5>Dec 20, 2021</h5>
             <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
+            <p>So, it's finally here. Winter break. I'll be honest it did not feel like an entire semester but that could be a product just how fast time flies. 
+                <br> <br>While we're here, it might be a good idea to reflect about this semester, all of it's ups and downs. 
+                <br> <br>On the downside: OH GOD THAT'S A LOT OF WORK FROM TWO AP CLASSES (APCSA is easy). 
+                <br>On the upside: Video Game playtime has gone down, Guitar time went up, and I am now Underclassmen Representative of the CS Club and Vice President of the Robotics Team.
+                <br> <br>Overall, probably a net positive. Now, what are the plans for next semester?
+                <br> <br>I want to get better on one-on-one conversations. I don't think I'm particulary good at that, and I need to be more social. I'll probably go to more CS and Robotics competitions. There's a good chance that I'm running for an NHS officer position, because why not?
+                <br> <br> - R. A. P.
+            </p>
           </div>
 
-          <div class="card">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some text..</p>
-          </div>
+          
 
     </div>
 
