added contact me form and adjusted navbar

--- a/about_me.html
+++ b/about_me.html
@@ -18,6 +18,7 @@
         <a href="my_projects.html">My Projects</a>
         <a href="about_me.html">About Me</a>
         <a href="image_gallery.html">Image Gallery</a>
+        <a href="contact_me.html">Contact Me!</a>
     </div>
 
     <div class="subheader">
