--- a/contact_me.html
+++ b/contact_me.html
@@ -22,17 +22,16 @@
     </div>
 
     <div class="subheader">
-        <h2>Image Gallery</h2>
+        <h2>Blog</h2>
     </div>
 
     <div class="content">
 
         <div class="card">
-            <h2>WORK IN PROGRESS</h2>
-            <h5>Something will be here soon, Dec 31, 2021</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
-            <p>Some time soon..</p>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfEqr7Hl9lkfXJvbUIgXrdM2CFFT6HtquRT-E71nHd1zXCzZw/viewform?embedded=true" width="640" height="979" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
           </div>
+
+          
 
     </div>
 
