--- a/contact_me.html
+++ b/contact_me.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="subheader">
-        <h2>Blog</h2>
+        <h2>Contact Me!</h2>
     </div>
 
     <div class="content">
